@@ -110,8 +110,14 @@ Version 1.7.8
        info is not available. (Stefan Fuhrmann)
 - BUG: Issue #383: access violation if context
        creation fails. (Stefan)
+- BUG: Issue #384: Crash when removing old log caches.
+       (Stefan Fuhrmann)
+- BUG: Issue #385: Log cache not filled after REPLACE.
+       (Stefan Fuhrmann)
 - BUG: Issue #386: double entries in log dialog
        after "next 100". (Stefan)
+- BUG: Issue #389: Blame using the wrong pegrev.
+       (Stefan Fuhrmann)
 
 Version 1.7.7
 - BUG: Issue #233: Crash when closing the
